resolve imports
fix other issues

Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>