@@ -15,7 +15,6 @@ package org.smarthomej.binding.dmx.internal.handler;
 
 import static org.smarthomej.binding.dmx.internal.DmxBindingConstants.THING_TYPE_ARTNET_BRIDGE;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -26,7 +25,11 @@ import org.openhab.core.thing.ThingTypeUID;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.smarthomej.binding.dmx.internal.config.ArtnetBridgeHandlerConfiguration;
-import org.smarthomej.binding.dmx.internal.dmxoverethernet.*;
+import org.smarthomej.binding.dmx.internal.dmxoverethernet.ArtnetNode;
+import org.smarthomej.binding.dmx.internal.dmxoverethernet.ArtnetPacket;
+import org.smarthomej.binding.dmx.internal.dmxoverethernet.DmxOverEthernetHandler;
+import org.smarthomej.binding.dmx.internal.dmxoverethernet.DmxOverEthernetPacket;
+import org.smarthomej.binding.dmx.internal.dmxoverethernet.IpNode;
 
 /**
  * The {@link ArtnetBridgeHandler} is responsible for handling the communication
@@ -36,7 +39,7 @@ import org.smarthomej.binding.dmx.internal.dmxoverethernet.*;
  */
 @NonNullByDefault
 public class ArtnetBridgeHandler extends DmxOverEthernetHandler {
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_ARTNET_BRIDGE);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_ARTNET_BRIDGE);
     public static final int MIN_UNIVERSE_ID = 0;
     public static final int MAX_UNIVERSE_ID = 32767;
 
