@@ -17,7 +17,6 @@ import static org.smarthomej.binding.dmx.internal.DmxBindingConstants.THING_TYPE
 
 import java.io.IOException;
 import java.net.Socket;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -43,7 +42,7 @@ import org.smarthomej.binding.dmx.internal.multiverse.Universe;
  */
 @NonNullByDefault
 public class Lib485BridgeHandler extends DmxBridgeHandler {
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_LIB485_BRIDGE);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_LIB485_BRIDGE);
     public static final int MIN_UNIVERSE_ID = 0;
     public static final int MAX_UNIVERSE_ID = 0;
     public static final int DEFAULT_PORT = 9020;
